Internal change
PiperOrigin-RevId: 525632300